--- a/R2_InternalLab_Hypothesis_Testing_and_Linear_Regression_Nirmalya_Misra.ipynb
+++ b/R2_InternalLab_Hypothesis_Testing_and_Linear_Regression_Nirmalya_Misra.ipynb
@@ -1516,20 +1516,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 474,
+   "execution_count": 482,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R Square Score: 0.92536721776934\n"
+      "R Square Score for training set: 0.9652735334606501\n"
      ]
     }
    ],
    "source": [
     "from sklearn.metrics import accuracy_score\n",
-    "print('R Square Score:',metrics.r2_score(Y_test, y_pred))"
+    "print('R Square Score for training set:',metrics.r2_score(Y_train, predicted_Y))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 477,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R Square Score for test set: 0.92536721776934\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "print('R Square Score for test set:',metrics.r2_score(Y_test, y_pred))"
    ]
   }
  ],
