--- a/R2_InternalLab_Hypothesis_Testing_and_Linear_Regression_Nirmalya_Misra.ipynb
+++ b/R2_InternalLab_Hypothesis_Testing_and_Linear_Regression_Nirmalya_Misra.ipynb
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 447,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 448,
+   "execution_count": 4,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 449,
+   "execution_count": 32,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -193,13 +193,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.01877842] [0.98562675]\n"
+      "[-1.49889438] [0.14509211]\n"
      ]
     }
    ],
    "source": [
     "from scipy.stats import ttest_1samp, ttest_ind, levene, f_oneway, binom\n",
-    "t_statistic, p_value = ttest_ind(e1, e3)\n",
+    "t_statistic, p_value = ttest_ind(GPU1, GPU3)\n",
     "print(t_statistic, p_value)"
    ]
   },
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 450,
+   "execution_count": 6,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 451,
+   "execution_count": 7,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -288,7 +288,7 @@
        "LeveneResult(statistic=2.6741725711150446, pvalue=0.12259792666001798)"
       ]
      },
-     "execution_count": 451,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 452,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 453,
+   "execution_count": 9,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -440,7 +440,7 @@
        "       3.67569090e-02, 1.02919345e-01, 2.00120949e-01, 2.66827932e-01])"
       ]
      },
-     "execution_count": 453,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 454,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +475,7 @@
        "<function matplotlib.pyplot.show(*args, **kw)>"
       ]
      },
-     "execution_count": 454,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 455,
+   "execution_count": 11,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 456,
+   "execution_count": 12,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -612,7 +612,7 @@
        "(49, 3)"
       ]
      },
-     "execution_count": 456,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 457,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 458,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 459,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +654,7 @@
        "        44,  64,  56,  40, 116,  87,  43,  43, 161,  36], dtype=int64)"
       ]
      },
-     "execution_count": 459,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -665,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 460,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +677,7 @@
        "        58,  63, 142,  64, 130, 105,  61,  50, 232,  54], dtype=int64)"
       ]
      },
-     "execution_count": 460,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -698,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 461,
+   "execution_count": 17,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1033,7 +1033,7 @@
        "48  False  False"
       ]
      },
-     "execution_count": 461,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1054,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 462,
+   "execution_count": 18,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1107,7 +1107,7 @@
        "x  0.981742  1.000000"
       ]
      },
-     "execution_count": 462,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1149,7 +1149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 463,
+   "execution_count": 19,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1174,7 +1174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 464,
+   "execution_count": 20,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1187,7 +1187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 465,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1196,7 +1196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 466,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1206,7 +1206,7 @@
        "         normalize=False)"
       ]
      },
-     "execution_count": 466,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1217,7 +1217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 467,
+   "execution_count": 23,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1238,7 +1238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 468,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1278,7 +1278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 469,
+   "execution_count": 25,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1291,7 +1291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 470,
+   "execution_count": 26,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1304,16 +1304,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 471,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1b8a5cb93c8>]"
+       "[<matplotlib.lines.Line2D at 0x1d52afa3dd8>]"
       ]
      },
-     "execution_count": 471,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1357,7 +1357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 472,
+   "execution_count": 28,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1406,7 +1406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 473,
+   "execution_count": 29,
    "metadata": {
     "scrolled": true
    },
@@ -1505,7 +1505,7 @@
        "9      52   53.828058"
       ]
      },
-     "execution_count": 473,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1516,7 +1516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 482,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1534,7 +1534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 477,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
